fix: margin when scrolling on iphone - test two

--- a/styles.css
+++ b/styles.css
@@ -121,7 +121,7 @@ ion-icon {
     -ms-overflow-style: none;
     scrollbar-width: none;
     padding-bottom: 5px;
-    padding-right: 10px;
+    padding-right: 19px;
 }
 
 .plates::-webkit-scrollbar {
